# colorgrad-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  Makefile  PRESET.md  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
benches/: basis.rs  catmull_rom.rs  custom_gradient.rs  gimp.rs  linear.rs  preset.rs
examples/: basic.rs  gradients.rs  noise.rs
examples/ggr/: Abstract_1.ggr  My_Gradient.ggr  UTF_8_BOM.ggr  test_hsv.ggr
examples/gradients/: gradients.rs  main.rs  util.rs
src/: builder.rs  core.rs  css_gradient.rs  gimp_gradient.rs  gradient.rs  lib.rs  linearize.rs  preset.rs  spline.rs  utils.rs
src/gradient/: basis.rs  boxed.rs  catmull_rom.rs  gimp.rs  inverse.rs  linear.rs  mod.rs  preset.rs  sharp.rs  smoothstep.rs  spline.rs
tests/: builder.rs  g_basis.rs  g_catmullrom.rs  g_inverse.rs  g_linear.rs  gimp_gradient.rs  gradient.rs  gradient_basis.rs  gradient_catmullrom.rs  gradient_inverse.rs  gradient_linear.rs  gradient_preset.rs  gradient_sharp.rs  integration_test.rs  preset.rs  spread.rs  utils.rs
