[package]
name = "colorgrad"
version = "0.7.0"
authors = ["Nor Khasyatillah <mazznoer@ymail.com>"]
edition = "2018"
description = "Color scales library for data visualization, charts, games, generative art and others."
readme = "README.md"
repository = "https://github.com/mazznoer/colorgrad-rs"
documentation = "https://docs.rs/colorgrad/"
license = "MIT OR Apache-2.0"
keywords = ["color", "colormap", "color-scales", "visualization", "gradient"]
categories = ["graphics", "visualization"]
exclude = [
	".github/*",
	".gitignore",
	"docs/*",
	"example_output/*",
]

[package.metadata.docs.rs]
features = ["named-colors", "preset", "ggr", "lab"]

[dependencies]
csscolorparser = { version = "0.7.0", default-features = false }

[features]
default = ["named-colors", "preset"]
named-colors = ["csscolorparser/named-colors"]
lab = ["csscolorparser/lab"]
preset = []
ggr = []

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
image = { version = "0.25.2", default-features = false, features = ["png"] }

[[example]]
name = "gradients"
required-features = ["lab", "preset", "ggr", "named-colors"]

[[bench]]
name = "custom_gradient"
harness = false
required-features = ["lab"]

[[bench]]
name = "preset"
harness = false
required-features = ["preset"]

[[bench]]
name = "gimp"
harness = false
required-features = ["ggr"]
