[package]
name = "colorgrad"
version = "0.8.0"
authors = ["Nor Khasyatillah <mazznoer@ymail.com>"]
edition = "2024"
description = "Color scales library for data visualization, charts, games, generative art and others."
readme = "README.md"
repository = "https://github.com/mazznoer/colorgrad-rs"
documentation = "https://docs.rs/colorgrad/"
license = "MIT OR Apache-2.0"
keywords = ["color", "colormap", "color-scales", "visualization", "gradient"]
categories = ["graphics", "visualization", "parser-implementations", "no-std"]
exclude = [
	".github/*",
	".gitignore",
	"docs/*",
	"example_output/*",
]

[package.metadata.docs.rs]
features = ["named-colors", "preset", "ggr", "std"]

[dependencies]
#csscolorparser = { version = "0.8.0", default-features = false }
csscolorparser = { git = "http://github.com/mazznoer/csscolorparser-rs", default-features = false }
libm = "0.2.15"

[features]
default = ["std"]
named-colors = ["csscolorparser/named-colors"]
preset = []
ggr = ["std"]
std = ["csscolorparser/std"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
image = { version = "0.25.2", default-features = false, features = ["png"] }

[[example]]
name = "basic"
required-features = ["preset", "named-colors"]

[[example]]
name = "gradients"
required-features = ["preset", "ggr", "named-colors"]

[[test]]
name = "preset"
required-features = ["preset"]

[[test]]
name = "builder"
required-features = ["named-colors"]

[[bench]]
name = "custom_gradient"
harness = false

[[bench]]
name = "preset"
harness = false
required-features = ["preset"]

[[bench]]
name = "gimp"
harness = false
required-features = ["ggr"]
